--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,9 +2,32 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: "Space Grotesk";
+  src: url("/fonts/space-groteks/SpaceGrotesk-VariableFont_wght.ttf")
+    format("truetype");
+  font-weight: 300 700;
+  font-style: normal;
+  font-display: swap;
+}
+
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --font-family: "Space Grotesk", sans-serif;
+
+  /* Colors (HSL) */
+  --color-primary: 87, 100%, 70% /*#b9ff66*/;
+  --color-secondary: 234, 17%, 12% /*#191a23*/;
+  --color-tertiary: 0, 0%, 95% /*#f3f3f3*/;
+  --color-white: 0, 0%, 100% /*#ffffff*/;
+  --color-black: 0, 0%, 0% /*#000000*/;
+
+  /* Sizes */
+  --container: 20px;
+
+  /* Typography */
+  --font-size: 16px;
+  /* --background: #ffffff;
+  --foreground: #171717; */
 }
 
 @media (prefers-color-scheme: dark) {
@@ -17,5 +40,9 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  padding: 0;
+  margin: 0 auto;
+  max-width: 1440px;
+  /* font-family: Arial, Helvetica, sans-serif; */
 }
+
